<resources>
    <string name="app_name">To-Do List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="enterTitle">Enter Title</string>
    <string name="details">Details</string>
    <string name="enterDeatils">Enter Details</string>
    <string name="completed">Completed</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_details">Reminder Details</string>
</resources>