<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:paddingTop="100dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"/>

    <EditText
        android:id="@+id/reminder_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterTitle"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"/>

    <EditText
        android:id="@+id/reminderDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterDeatils"/>

    <CheckBox
        android:id="@+id/reminderCheckImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/completed" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/white"/>


</LinearLayout>